--- a/Day4A_PracticeProblem/Day4A_PracticeProblem.csproj
+++ b/Day4A_PracticeProblem/Day4A_PracticeProblem.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DemoArrayList.cs" />
+    <Compile Include="DemoDictionary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
